--- a/src/generator/css/base.less
+++ b/src/generator/css/base.less
@@ -135,7 +135,9 @@ body a:hover {
 }
 
 .footer {
-    @apply max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4;
+    @apply flex flex-wrap items-center justify-between p-4 border-t border-gray-800 pt-10;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
 }
 
 .navigation {
